Second Commit - Changed creator from 'Meta' to 'Shobhit' in the footer.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <a href="#">About</a><a href="#">Help</a><a href="#">More</a>
         </div>
 
-        <div style="font-weight: 600; text-align: center; margin: 10px 0; color: #777;">Meta &copy; 2022</div>
+        <div style="font-weight: 600; text-align: center; margin: 10px 0; color: #777;">Shobhit &copy; 2022</div>
     </div>
 </body>
 </html>
